fixed upload button text alignment

--- a/client/src/components/AdminDashboard/viewprofile.css
+++ b/client/src/components/AdminDashboard/viewprofile.css
@@ -362,6 +362,7 @@ padding: 0;
 
 .uploadBoxes .dBlueBtn {
     width: 100%;
+    text-align: center;
 }
 
 .uploadDocs img {
